--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="Alice's Adventures in Wonderland, by Lewis Carroll." src="../images/titlepage.svg"/>
+			<img alt="Alice's Adventures in Wonderland, by Lewis Carroll" src="../images/titlepage.svg"/>
 		</section>
 	</body>
 </html>
