Correct poem, verse, and song styling

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -10,93 +10,93 @@
 			<p>
 				<span epub:type="title">All in the golden afternoon</span>
 				<br/>
-				<span>      Full leisurely we glide;</span>
+				<span class="i1">Full leisurely we glide;</span>
 				<br/>
 				<span>For both our oars, with little skill,</span>
 				<br/>
-				<span>      By little arms are plied;</span>
+				<span class="i1">By little arms are plied;</span>
 				<br/>
 				<span>While little hands make vain pretence</span>
 				<br/>
-				<span>      Our wanderings to guide.</span>
+				<span class="i1">Our wanderings to guide.</span>
 			</p>
 			<p>
 				<span>Ah, cruel Three! In such an hour,</span>
 				<br/>
-				<span>      Beneath such dreamy weather,</span>
+				<span class="i1">Beneath such dreamy weather,</span>
 				<br/>
 				<span>To beg a tale of breath too weak</span>
 				<br/>
-				<span>      To stir the tiniest feather!</span>
+				<span class="i1">To stir the tiniest feather!</span>
 				<br/>
 				<span>Yet what can one poor voice avail</span>
 				<br/>
-				<span>      Against three tongues together?</span>
+				<span class="i1">Against three tongues together?</span>
 			</p>
 			<p>
 				<span>Imperious Prima flashes forth</span>
 				<br/>
-				<span>      Her edict “to begin it”:</span>
+				<span class="i1">Her edict “to begin it”:</span>
 				<br/>
 				<span>In gentler tones Secunda hopes</span>
 				<br/>
-				<span>      “There will be nonsense in it.”</span>
+				<span class="i1">“There will be nonsense in it.”</span>
 				<br/>
 				<span>While Tertia interrupts the tale</span>
 				<br/>
-				<span>      Not <em>more</em> than once a minute.</span>
+				<span class="i1">Not <em>more</em> than once a minute.</span>
 			</p>
 			<p>
 				<span>Anon, to sudden silence won,</span>
 				<br/>
-				<span>      In fancy they pursue</span>
+				<span class="i1">In fancy they pursue</span>
 				<br/>
 				<span>The dream-child moving through a land</span>
 				<br/>
-				<span>      Of wonders wild and new,</span>
+				<span class="i1">Of wonders wild and new,</span>
 				<br/>
 				<span>In friendly chat with bird or beast⁠—</span>
 				<br/>
-				<span>      And half believe it true.</span>
+				<span class="i1">And half believe it true.</span>
 			</p>
 			<p>
 				<span>And ever, as the story drained</span>
 				<br/>
-				<span>      The wells of fancy dry,</span>
+				<span class="i1">The wells of fancy dry,</span>
 				<br/>
 				<span>And faintly strove that weary one</span>
 				<br/>
-				<span>      To put the subject by,</span>
+				<span class="i1">To put the subject by,</span>
 				<br/>
 				<span>“The rest next time⁠—” “It <em>is</em> next time!”</span>
 				<br/>
-				<span>      The happy voices cry.</span>
+				<span class="i1">The happy voices cry.</span>
 			</p>
 			<p>
 				<span>Thus grew the tale of Wonderland:</span>
 				<br/>
-				<span>      Thus slowly, one by one,</span>
+				<span class="i1">Thus slowly, one by one,</span>
 				<br/>
 				<span>Its quaint events were hammered out⁠—</span>
 				<br/>
-				<span>      And now the tale is done,</span>
+				<span class="i1">And now the tale is done,</span>
 				<br/>
 				<span>And home we steer, a merry crew,</span>
 				<br/>
-				<span>      Beneath the setting sun.</span>
+				<span class="i1">Beneath the setting sun.</span>
 			</p>
 			<p>
 				<span>Alice! A childish story take,</span>
 				<br/>
-				<span>      And with a gentle hand</span>
+				<span class="i1">And with a gentle hand</span>
 				<br/>
 				<span>Lay it where Childhood’s dreams are twined</span>
 				<br/>
-				<span>      In Memory’s mystic band,</span>
+				<span class="i1">In Memory’s mystic band,</span>
 				<br/>
 				<span>Like pilgrim’s withered wreath of flowers</span>
 				<br/>
-				<span>      Pluck’d in a far-off land.</span>
+				<span class="i1">Pluck’d in a far-off land.</span>
 			</p>
 		</section>
 	</body>
