--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -11,6 +11,9 @@
 					<a href="text/titlepage.xhtml">Title Page</a>
 				</li>
 				<li>
+					<a href="text/imprint.xhtml">Imprint</a>
+				</li>
+				<li>
 					<a href="text/epigraph.xhtml">All in the Golden Afternoon</a>
 				</li>
 				<li>
@@ -62,6 +65,9 @@
 			<ol>
 				<li>
 					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Title Page</a>
+				</li>
+				<li>
+					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
 					<a href="text/epigraph.xhtml" epub:type="frontmatter z3998:fiction epigraph">All in the Golden Afternoon</a>
