--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 2008 by<br/>
 			<span class="name">Arthur DiBianca</span> and <span class="name">David Widger</span><br/>
 			for<br/>
-			<a href="http://www.gutenberg.org/ebooks/11">Project Gutenberg</a><br/>
+			<a href="https://www.gutenberg.org/ebooks/11">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
 			<a href="https://archive.org/stream/adventuresalices00carrrich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
@@ -35,7 +35,7 @@
 			<p>This ebook was first released on<br/>
 			<span class="release-date">May 12, 2015, 12:01 <abbr class="time eoc">a.m.</abbr></span><br/>
 			The version you’re reading now was released on<br/>
-			<span class="revision-date">January 8, 2016, 6:26 <abbr class="time eoc">a.m.</abbr></span><br/>
+			<span class="revision-date">January 27, 2016, 7:41 <abbr class="time eoc">p.m.</abbr></span><br/>
 			You can check for updates to this ebook or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/lewis-carroll/alices-adventures-in-wonderland">this ebook’s Standard Ebooks page</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone contribute at <a href="https://standardebooks.org">https://standardebooks.org</a>.</p>
