--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -29,7 +29,7 @@
 					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <span epub:type="subtitle">The Rabbit Sends in a Little Bill</span></a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: <span epub:type="subtitle">Advice From a Caterpillar</span></a>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: <span epub:type="subtitle">Advice from a Caterpillar</span></a>
 				</li>
 				<li>
 					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: <span epub:type="subtitle">Pig and Pepper</span></a>
