--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,40 +17,40 @@
 					<a href="text/epigraph.xhtml">All in the Golden Afternoon</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">Down the Rabbit-Hole</span></a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Down the Rabbit-Hole</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: <span epub:type="subtitle">The Pool of Tears</span></a>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Pool of Tears</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <span epub:type="subtitle">A Caucus-Race and a Long Tale</span></a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: A Caucus-Race and a Long Tale</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <span epub:type="subtitle">The Rabbit Sends in a Little Bill</span></a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Rabbit Sends in a Little Bill</a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: <span epub:type="subtitle">Advice from a Caterpillar</span></a>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Advice from a Caterpillar</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: <span epub:type="subtitle">Pig and Pepper</span></a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Pig and Pepper</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: <span epub:type="subtitle">A Mad Tea-Party</span></a>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: A Mad Tea-Party</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <span epub:type="subtitle">The Queen’s Croquet-Ground</span></a>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Queen’s Croquet-Ground</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: <span epub:type="subtitle">The Mock Turtle’s Story</span></a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Mock Turtle’s Story</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: <span epub:type="subtitle">The Lobster Quadrille</span></a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Lobster Quadrille</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: <span epub:type="subtitle">Who Stole the Tarts?</span></a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Who Stole the Tarts?</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: <span epub:type="subtitle">Alice’s Evidence</span></a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Alice’s Evidence</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
