--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -78,6 +78,9 @@
 					<a href="text/epigraph.xhtml" epub:type="frontmatter z3998:fiction epigraph">All in the Golden Afternoon</a>
 				</li>
 				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Alice’s Adventures in Wonderland</a>
 				</li>
 				<li>
