Inserted illustrations throughout

--- a/src/epub/text/frontispiece.xhtml
+++ b/src/epub/text/frontispiece.xhtml
@@ -7,6 +7,10 @@
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="frontispiece" epub:type="frontispiece">
+			<figure class="full-page" id="illustration-1">
+				<img alt="The King and Queen of Hearts are seated side-by-side on thrones looking out at the court. The Knave of Hearts is in the foreground, arms crossed and nose in the air." src="../images/illustration-1.svg" epub:type="z3998:illustration"/>
+				<figcaption>The King and Queen of Hearts were seated on their throne, with a great crowd assembled about them⁠—all sorts of little birds and beasts, as well as the whole pack of cards.</figcaption>
+			</figure>
 		</section>
 	</body>
 </html>
