--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Alice’s Adventures in Wonderland, by Lewis Carroll" src="../images/titlepage.svg"/>
+			<img alt="The titlepage for the Standard Ebooks edition of Alice’s Adventures in Wonderland, by Lewis Carroll. Illustrated by John Tenniel" src="../images/titlepage.svg"/>
 		</section>
 	</body>
 </html>
