--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,6 +17,9 @@
 					<a href="text/epigraph.xhtml">All in the Golden Afternoon</a>
 				</li>
 				<li>
+					<a href="text/frontispiece.xhtml">Frontispiece</a>
+				</li>
+				<li>
 					<a href="text/halftitle.xhtml">Alice’s Adventures in Wonderland</a>
 					<ol>
 						<li>
@@ -58,6 +61,9 @@
 					</ol>
 				</li>
 				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
@@ -78,10 +84,16 @@
 					<a href="text/epigraph.xhtml" epub:type="frontmatter z3998:fiction epigraph">All in the Golden Afternoon</a>
 				</li>
 				<li>
+					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:fiction frontispiece">Frontispiece</a>
+				</li>
+				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Alice’s Adventures in Wonderland</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
