Changed SVGs to non-"optimised" due to problems with latter.

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -29,7 +29,7 @@
 						<a href="../text/chapter-2.xhtml#illustration-6">The Rabbit skurried away into the darkness as hard as he could go.</a>
 					</li>
 					<li>
-						<a href="../text/chapter-2.xhtml#illustration-7">She soon made out that she was in the pool of tears which she had wept when she was nine feet high.</a>
+						<a href="../text/chapter-2.xhtml#illustration-7">She was in the pool of tears which she had wept when she was nine feet high.</a>
 					</li>
 					<li>
 						<a href="../text/chapter-2.xhtml#illustration-8">The Mouse was swimming away from her as hard as it could go, and making quite a commotion in the pool as it went.</a>
