--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -84,7 +84,7 @@
 					<a href="text/epigraph.xhtml" epub:type="frontmatter z3998:fiction epigraph">All in the Golden Afternoon</a>
 				</li>
 				<li>
-					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:fiction frontispiece">Frontispiece</a>
+					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:fiction">Frontispiece</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
