--- a/src/epub/text/frontispiece.xhtml
+++ b/src/epub/text/frontispiece.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
-		<section id="frontispiece">
+		<section id="frontispiece" epub:type="z3998:frontispiece">
 			<figure class="full-page" id="illustration-1">
 				<img alt="The King and Queen of Hearts are seated side-by-side on thrones looking out at the court. The Knave of Hearts is in the foreground, arms crossed and nose in the air." src="../images/illustration-1.svg" epub:type="z3998:illustration se:image.color-depth.black-on-transparent"/>
 			</figure>
