--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -81,10 +81,10 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter z3998:fiction epigraph">All in the Golden Afternoon</a>
+					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">All in the Golden Afternoon</a>
 				</li>
 				<li>
-					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:fiction">Frontispiece</a>
+					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:frontispiece">Frontispiece</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
