--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -52,7 +52,7 @@
 					</li>
 					<li>
 						<p>
-							<a href="chapter-3.xhtml#illustration-9">They were indeed a queer-looking party that assembled on the bank⁠.</a>
+							<a href="chapter-3.xhtml#illustration-9">They were indeed a queer-looking party that assembled on the bank.</a>
 						</p>
 					</li>
 					<li>
