--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/frontispiece.xhtml">Frontispiece</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">Alice’s Adventures in Wonderland</a>
+					<a href="text/halftitlepage.xhtml">Alice’s Adventures in Wonderland</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Down the Rabbit-Hole</a>
@@ -87,7 +87,7 @@
 					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:frontispiece">Frontispiece</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Alice’s Adventures in Wonderland</a>
