--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Alice’s Adventures in Wonderland</i><br/>
 			was published in 1865 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Lewis_Carroll">Lewis Carroll</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://alexcabal.com">Alex Cabal</a>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
