--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,10 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Alice’s Adventures in Wonderland, by Lewis Carroll. Illustrated by John Tenniel" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
+			<h1 epub:type="title">Alice’s Adventures in Wonderland</h1>
+			<p>By <b epub:type="z3998:personal-name z3998:author">Lewis Carroll</b>.</p>
+			<p>Illustrated by <b epub:type="z3998:personal-name">John Tenniel</b>.</p>
+			<img alt="" src="../images/titlepage.svg" epub:type="se:image.color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
