Update LoI to new standards

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -6,217 +6,215 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter">
-		<section id="loi" epub:type="loi">
-			<nav epub:type="loi">
-				<h2 epub:type="title">List of Illustrations</h2>
-				<ol>
-					<li>
-						<p>
-							<a href="frontispiece.xhtml#illustration-1">The King and Queen of Hearts were seated on their throne, with a great crowd assembled about them⁠—all sorts of little birds and beasts, as well as the whole pack of cards.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-2">When the Rabbit actually took a watch out of its waistcoat-pocket, and looked at it, and then hurried on, Alice started to her feet.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-3">She came upon a low curtain she had not noticed before, and behind it was a little door about fifteen inches high.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-1.xhtml#illustration-4">Round the neck of the bottle was a paper label, with the words “<b>Drink Me</b>” beautifully printed on it in large letters.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-2.xhtml#illustration-5">“Now I’m opening out like the largest telescope that ever was! Goodbye, feet!”</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-2.xhtml#illustration-6">The Rabbit skurried away into the darkness as hard as he could go.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-2.xhtml#illustration-7">She was in the pool of tears which she had wept when she was nine feet high.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-2.xhtml#illustration-8">The Mouse was swimming away from her as hard as it could go, and making quite a commotion in the pool as it went.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-3.xhtml#illustration-9">They were indeed a queer-looking party that assembled on the bank.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-3.xhtml#illustration-10">They all crowded round her once more, while the Dodo solemnly presented the thimble.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-4.xhtml#illustration-11">She tried the effect of lying down with one elbow against the door, and the other arm curled round her head.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-4.xhtml#illustration-12">She did not get hold of anything, but she heard a little shriek and a fall, and a crash of broken glass.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-4.xhtml#illustration-13">The first thing she heard was a general chorus of “There goes Bill!”</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-4.xhtml#illustration-14">An enormous puppy was looking down at her with large round eyes.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-5.xhtml#illustration-15">The Caterpillar and Alice looked at each other for some time in silence.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-5.xhtml#illustration-17">Yet you turned a back-somersault in at the door.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-5.xhtml#illustration-18">Yet you finished the goose, with the bones and the beak.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-5.xhtml#illustration-19">Yet you balanced an eel on the end of your nose.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6.xhtml#illustration-20">The Fish-Footman began by producing from under his arm a great letter.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6.xhtml#illustration-21">The Duchess was sitting on a three-legged stool in the middle, nursing a baby.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6.xhtml#illustration-22">It was neither more nor less than a pig, and she felt that it would be quite absurd for her to carry it further.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6.xhtml#illustration-23">She was a little startled by seeing the Cheshire Cat sitting on a bough of a tree a few yards off.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6.xhtml#illustration-24">This time it vanished quite slowly, beginning with the end of the tail, and ending with the grin.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-7.xhtml#illustration-25">The Hatter opened his eyes very wide on hearing this.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-7.xhtml#illustration-26">Twinkle, twinkle, little bat!</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-7.xhtml#illustration-27">The last time she saw them, they were trying to put the Dormouse into the teapot.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-8.xhtml#illustration-28">The roses were white, but there were three gardeners busily painting them red.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-8.xhtml#illustration-29">The Queen turned crimson with fury, and screamed “Off with her head!”</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-8.xhtml#illustration-30">The chief difficulty Alice found at first was in managing her flamingo.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-8.xhtml#illustration-31">When she got back to the Cheshire Cat, she was surprised to find quite a large crowd collected round it.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-9.xhtml#illustration-32">She was exactly the right height to rest her chin upon Alice’s shoulder, and it was an uncomfortably sharp chin.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-9.xhtml#illustration-33">They very soon came upon a Gryphon, lying fast asleep in the sun.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-9.xhtml#illustration-34">“When we were little,” the Mock Turtle went on at last, more calmly, “we went to school in the sea.”</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-10.xhtml#illustration-35">So they began solemnly dancing round and round Alice, every now and then treading on her toes.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-10.xhtml#illustration-36">Her head was so full of the Lobster Quadrille, that she hardly knew what she was saying.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-11.xhtml#illustration-37">The White Rabbit blew three blasts on the trumpet.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-11.xhtml#illustration-38">“I’m a poor man, your Majesty,” the Hatter began, in a trembling voice.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-11.xhtml#illustration-39">“I’d rather finish my tea,” said the Hatter, with an anxious look at the Queen.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-12.xhtml#illustration-40">She jumped up in such a hurry that she tipped over the jury-box with the edge of her skirt.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-12.xhtml#illustration-41">“Why, there they are!” said the King triumphantly, pointing to the tarts on the table.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-12.xhtml#illustration-42">At this the whole pack rose up into the air, and came flying down upon her.</a>
-						</p>
-					</li>
-				</ol>
-			</nav>
-		</section>
+		<nav id="loi" epub:type="loi">
+			<h2 epub:type="title">List of Illustrations</h2>
+			<ol>
+				<li>
+					<p>
+						<a href="frontispiece.xhtml#illustration-1">The King and Queen of Hearts were seated on their throne, with a great crowd assembled about them⁠—all sorts of little birds and beasts, as well as the whole pack of cards.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-2">When the Rabbit actually took a watch out of its waistcoat-pocket, and looked at it, and then hurried on, Alice started to her feet.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-3">She came upon a low curtain she had not noticed before, and behind it was a little door about fifteen inches high.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-1.xhtml#illustration-4">Round the neck of the bottle was a paper label, with the words “<b>Drink Me</b>” beautifully printed on it in large letters.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-2.xhtml#illustration-5">“Now I’m opening out like the largest telescope that ever was! Goodbye, feet!”</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-2.xhtml#illustration-6">The Rabbit skurried away into the darkness as hard as he could go.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-2.xhtml#illustration-7">She was in the pool of tears which she had wept when she was nine feet high.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-2.xhtml#illustration-8">The Mouse was swimming away from her as hard as it could go, and making quite a commotion in the pool as it went.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-3.xhtml#illustration-9">They were indeed a queer-looking party that assembled on the bank.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-3.xhtml#illustration-10">They all crowded round her once more, while the Dodo solemnly presented the thimble.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-4.xhtml#illustration-11">She tried the effect of lying down with one elbow against the door, and the other arm curled round her head.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-4.xhtml#illustration-12">She did not get hold of anything, but she heard a little shriek and a fall, and a crash of broken glass.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-4.xhtml#illustration-13">The first thing she heard was a general chorus of “There goes Bill!”</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-4.xhtml#illustration-14">An enormous puppy was looking down at her with large round eyes.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-5.xhtml#illustration-15">The Caterpillar and Alice looked at each other for some time in silence.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-5.xhtml#illustration-17">Yet you turned a back-somersault in at the door.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-5.xhtml#illustration-18">Yet you finished the goose, with the bones and the beak.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-5.xhtml#illustration-19">Yet you balanced an eel on the end of your nose.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6.xhtml#illustration-20">The Fish-Footman began by producing from under his arm a great letter.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6.xhtml#illustration-21">The Duchess was sitting on a three-legged stool in the middle, nursing a baby.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6.xhtml#illustration-22">It was neither more nor less than a pig, and she felt that it would be quite absurd for her to carry it further.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6.xhtml#illustration-23">She was a little startled by seeing the Cheshire Cat sitting on a bough of a tree a few yards off.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6.xhtml#illustration-24">This time it vanished quite slowly, beginning with the end of the tail, and ending with the grin.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-7.xhtml#illustration-25">The Hatter opened his eyes very wide on hearing this.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-7.xhtml#illustration-26">Twinkle, twinkle, little bat!</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-7.xhtml#illustration-27">The last time she saw them, they were trying to put the Dormouse into the teapot.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-8.xhtml#illustration-28">The roses were white, but there were three gardeners busily painting them red.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-8.xhtml#illustration-29">The Queen turned crimson with fury, and screamed “Off with her head!”</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-8.xhtml#illustration-30">The chief difficulty Alice found at first was in managing her flamingo.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-8.xhtml#illustration-31">When she got back to the Cheshire Cat, she was surprised to find quite a large crowd collected round it.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-9.xhtml#illustration-32">She was exactly the right height to rest her chin upon Alice’s shoulder, and it was an uncomfortably sharp chin.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-9.xhtml#illustration-33">They very soon came upon a Gryphon, lying fast asleep in the sun.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-9.xhtml#illustration-34">“When we were little,” the Mock Turtle went on at last, more calmly, “we went to school in the sea.”</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-10.xhtml#illustration-35">So they began solemnly dancing round and round Alice, every now and then treading on her toes.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-10.xhtml#illustration-36">Her head was so full of the Lobster Quadrille, that she hardly knew what she was saying.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-11.xhtml#illustration-37">The White Rabbit blew three blasts on the trumpet.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-11.xhtml#illustration-38">“I’m a poor man, your Majesty,” the Hatter began, in a trembling voice.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-11.xhtml#illustration-39">“I’d rather finish my tea,” said the Hatter, with an anxious look at the Queen.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-12.xhtml#illustration-40">She jumped up in such a hurry that she tipped over the jury-box with the edge of her skirt.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-12.xhtml#illustration-41">“Why, there they are!” said the King triumphantly, pointing to the tarts on the table.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-12.xhtml#illustration-42">At this the whole pack rose up into the air, and came flying down upon her.</a>
+					</p>
+				</li>
+			</ol>
+		</nav>
 	</body>
 </html>
