--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -75,31 +75,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">All in the Golden Afternoon</a>
-				</li>
-				<li>
-					<a href="text/frontispiece.xhtml" epub:type="frontmatter z3998:frontispiece">Frontispiece</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Alice’s Adventures in Wonderland</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Alice’s Adventures in Wonderland</a>
 				</li>
 				<li>
 					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
