--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Arthur DiBianca</b> and <b epub:type="z3998:personal-name">David Widger</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/11">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://archive.org/details/adventuresalices00carrrich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Amanita</i>,<br/>
