Fix missing item in LoI

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -86,6 +86,11 @@
 				</li>
 				<li>
 					<p>
+						<a href="chapter-5.xhtml#illustration-16">A young man in rural costume stares at an old fat man who is standing on his head.</a>
+					</p>
+				</li>
+				<li>
+					<p>
 						<a href="chapter-5.xhtml#illustration-17">Yet you turned a back-somersault in at the door.</a>
 					</p>
 				</li>
